--- a/contact.html
+++ b/contact.html
@@ -106,7 +106,7 @@
             <div class="content-box">谭司璐，华中农业大学2024级硕士研究生，资源利用与植物保护专业</div>
             <div class="content-box">李健章，华中农业大学2024级硕士研究生，水土保持与荒漠化防治专业</div>
             <div class="content-box">杨德堃，华中农业大学2024级硕士研究生，生态学专业</div>
-            <div class="content-box">艾力·斯迪克，华中农业大学2024级硕士研究生，农业工程与信息技术专业</div>
+            <div class="content-box">艾力·斯迪克，华中农业大学2024级硕士研究生，资源利用与植物保护专业</div>
         </section>
         <section>
             <h2>联系方式</h2>
